Added pyproject.toml for a more modern installation process; Restructured the CLI commands in their dedicated subpackage called commands; added docstrings and documentaton to all modules; added installation documentation; added CHANGELOG.md; added more streamlined versioning;

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,1 +1,8 @@
+include README.rst
+include LICENSE
+include setup.py
+include pyproject.toml
+include .env
+include .env.example
+
 recursive-include GONet_Wizard/GONet_dashboard/src/assets *
