Removed test_commands.py; added test_camera_commands.py; added test_show_files.py; suppressed FigureCanvasAgg warning appearing in tests, by editing the project.toml; Renamed all command functions inside their module, the avoid Namespace pollution; renamet terminate_imaging.py to terminate.py; restructured in settings.py for smoother tests.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,3 +48,8 @@ GONet_Wizard = "GONet_Wizard.__main__:main"
 [tool.setuptools_scm]
 version_scheme = "post-release"
 local_scheme = "node-and-date"
+
+[tool.pytest.ini_options]
+filterwarnings = [
+    "ignore:.*FigureCanvasAgg is non-interactive.*"
+]
