Expanded extraction functionality with differnt shapes available; created a GUI with the possibility to extract shapes interactively, also by free hand drawing; added documentation; restructured and updated previous documentation; created a separate module handling saving and loading jsons files.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,8 @@ dependencies = [
     "python-dotenv",
     "paramiko",
     "scp",
-    "astropy"
+    "astropy",
+    "pywebview"
 ]
 
 [project.optional-dependencies]
